test/spec_vectors/elem/ok/module_32.wat
(module (func) (table 1 funcref) (elem (table 0) (i32.const 0) funcref (ref.null func)))