test/spec_vectors/elem/fail/module_84.wat
(module (table 1 funcref) (elem (i32.const 0) externref (ref.null extern)))